# app

./: README.md  docker-compose.yml  test_pdf.py
api/: Dockerfile  Keycloack.md  kc_cheatsheet.md  permission_check.md  pyproject.toml
api/src/: main.py  utils.py
api/src/core/: config.py  db.py  deps.py  keycloak.py  settings.py
api/src/latex_templates/: H.tex  Rules.tex  T-answers.tex  T-code.tex  T-fixed.tex  T-variants.tex  UC.tex  date.tex  main.tex  main_variants.tex
api/src/models/: __init__.py  exam.py  exam_config.py  exams.py  manager.py  professor.py  professor_subject_link.py  question.py  question_option.py  student.py  student_subject_link.py  subject.py  topic.py  topic_config.py  user.py  workbook.py
api/src/routers/: exam.py  product.py  professor.py  question.py  question_option.py  subject.py  topic.py  topics.py  user.py
api/src/schemas/: subject.py  user.py
api/src/services/: exam.py  pdf_generator.py  professor.py  question.py  question_option.py  subject.py  topic.py  user.py
deployment/: docker-compose.dev.yml
deployment/keycloak-config/: realm.json
test/: .gitignore  README.md  generate_exam.sh  test_api.sh  test_prof_end.sh  updated_tests.md  user_creation.sh
web/: index.html  package-lock.json  package.json  tailwind.config.js
web/src/: globals.css  routeTree.gen.ts
web/src/components/: QuestionModal.tsx  TopicCard.tsx  TopicModal.tsx  XmlUploadButton.tsx  app-breadcrumb.tsx  app-sidebar.tsx  custom-table.tsx  exam-config-card.tsx  multi-select.tsx  nova-uc-form.tsx  novo-exame-form.tsx  topic-check-box.tsx
(+13 files in other folders)
