[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.119.0",
    "psycopg[binary,pool]>=3.2.11",
    "sqlmodel>=0.0.27",
    "python-keycloak>=3.3.0",
    "pyjwt[crypto]>=2.8.0", 
    "python-multipart>=0.0.9",
    "authlib>=1.3.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
]
